fix z-index of toasts (#605)

--- a/app/public/src/styles.css
+++ b/app/public/src/styles.css
@@ -229,6 +229,7 @@ p:last-child {
 
 .Toastify__toast-container {
   width: auto !important;
+  --toastify-z-index: 1040;
 }
 
 .Toastify__toast {
